--- a/pio_testing/platformio.ini
+++ b/pio_testing/platformio.ini
@@ -8,6 +8,7 @@ platform = teensy
 board = teensy41
 framework = arduino
 upload_protocol = teensy-cli
-extra_scripts = pre:extra_script.py
+; extra_scripts = pre:extra_script.py
 lib_deps = 
     SPI
+    ../../shared_firmware_interfaces
