Made sample() and convert() functions private

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.tpp": "c",
         "*.tcc": "c",
-        "ostream": "c"
+        "ostream": "c",
+        "mcp_adc.h": "c"
     }
 }
