--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.tpp": "c",
         "*.tcc": "c",
         "ostream": "c",
-        "mcp_adc.h": "c"
+        "mcp_adc.h": "c",
+        "analogsensorsinterface.h": "c"
     }
 }
