Made sample() and convert() functions private (#16)
* Made sample() and convert() functions private

* Fixed formatting

---------

Co-authored-by: Bhardwaj, Mansi <mbhardwaj41@gatech.edu>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.tpp": "c",
         "*.tcc": "c",
-        "ostream": "c"
+        "ostream": "c",
+        "mcp_adc.h": "c",
+        "analogsensorsinterface.h": "c"
     }
 }
